# attention-lab

./: .gitignore  CURRICULUM.md  LEARNING_SPEC.md  README.md  learnings.md  pyproject.toml
notebooks/: 01_attention_by_hand.ipynb  03_variance_scaling.ipynb
phases/: README.md
phases/phase-0-conventions/: README.md
phases/phase-1-attention-mechanics/: README.md
phases/phase-1-attention-mechanics/notebooks/: 02_softmax_temperature.ipynb
phases/phase-1-attention-mechanics/theory/: 01_scaled_dot_product.md  02_softmax.md  03_why_sqrt_dk.md  README.md  _pandoc_header.tex
phases/phase-1-attention-mechanics/theory/tex/: 01_scaled_dot_product.tex  02_softmax.tex  03_why_sqrt_dk.tex  README.tex
phases/phase-2-attention-deployed/: README.md
phases/phase-2-attention-deployed/notebooks/: 04_causal_masking.ipynb  05_heads_specialize.ipynb  06_positional_bakeoff.ipynb  07_norm_and_residuals.ipynb  08_ffn_capacity.ipynb  09_residual_stream.ipynb
phases/phase-2-attention-deployed/theory/: 04_causal_masking.md  05_multi_head.md  06_positional_encodings.md  07_layer_norm_residuals.md  08_feedforward.md  09_residual_stream.md
phases/phase-3-training-dynamics/: README.md
phases/phase-4-interpretability/: README.md
phases/phase-5-generative-substrate/: README.md
phases/phase-6-flow-matching-diffusion/: README.md
phases/phase-7-geometric-manifolds/: README.md
src/attn_lab/: __init__.py  viz.py
theory/: 00_linear_algebra_primer.md  01_scaled_dot_product.md  02_softmax.md  03_why_sqrt_dk.md
theory/solutions/: 03_why_sqrt_dk.md
